# ai-defra-search-agent

./: .env.example  .env.test  .gitignore  .snyk  .trivyignore  Dockerfile  GUARDRAILS.md  OBSERVABILITY.md  README.md  compose.debug.yaml  compose.debug.yml  compose.test.yaml  compose.yaml  compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  sonar-project.properties  test_chat.py
.cursor/rules/: use-project-guidelines.mdc
.github/workflows/: check-pull-request.yml  publish-hotfix.yml  publish.yml  scan.yml
app/: config.py  dependencies.py  main.py  test_main.py
app/ai/: service.py
app/bedrock/: models.py  service.py
app/chat/: agent.py  api_schemas.py  dependencies.py  job_models.py  job_repository.py  models.py  repository.py  router.py  service.py  worker.py
app/chat_with_history/: router.py
app/common/: bedrock.py  event_broker.py  http_client.py  knowledge.py  metrics.py  mongo.py  sqs.py  tracing.py
app/conversation_history/: api_schemas.py  dependencies.py  models.py  repository.py  router.py  service.py
app/data_ingestion/: router.py
app/debug/: router.py
app/entrypoints/: api.py  fastapi.py
app/feedback/: api_schemas.py  dependencies.py  models.py  repository.py  router.py  service.py
app/health/: router.py
app/lib/: bedrock_client.py  bedrock_embedding_client.py  enhanced_langgraph_rag.py  enhanced_security_monitor.py  guardrails.py  langgraph_rag_chat.py  llm_chat.py  observability_models.py  observability_service.py  vectorstore_client.py
app/lib/aws_bedrock/: bedrock_client.py  bedrock_embedding_client.py
app/lib/conversation_history/: service.py
app/lib/graph/: consts.py  graph.py  state.py
app/lib/graph/chains/: hallucination_grader.py  retrieval_grader.py
app/lib/graph/nodes/: __init__.py  final_answer.py  generate.py  grade_documents.py  retrieve.py
app/lib/guardrails/: guardrails.py
app/lib/monitoring/: enhanced_security_monitor.py  security_monitoring.py
app/lib/observability/: observability_metrics.py  observability_service.py
app/lib/rag/: enhanced_langgraph_rag.py  langgraph_rag_chat.py  rag_core.py
app/lib/s3/: s3_service.py
app/lib/store/: vectorstore_client.py
app/models/: __init__.py  api_schemas.py  dependencies.py  models.py  router.py  service.py
app/observability/: model_costs.json  router.py
app/prompts/: final_answer.txt  loader.py  qa_system.txt  repository.py  retrieval_grader.txt  semantic_guardrails.txt
app/resources/prompts/: system_prompt.txt
app/v2_chat/: agent.py  api_schemas.py  dependencies.py  models.py  nodes.py  repository.py  router.py  service.py  state_models.py  tools.py
app/v2_chat/prompts/: final_answer.txt  hallucination_grader.txt  knowledge_group_selector.txt  qa_system.txt  retrieval_grader.txt  semantic_guardrails.txt  system_guardrails.txt
compose/: aws.env  start-localstack.sh
docs/ai/: project-context.md  system-prompt-minified.md
perf-tests/data/: knowledgeGroups.json  knowledgeSnapshots.json
perf-tests/scripts/: clear-mongodb.js  init-mongodb.js  init-mongodb.sh  seed-mongodb.py
scripts/: check-unpinned-dependencies.sh
tests/: conftest.py  test_config.py
tests/bedrock/: test_bedrock_service.py
tests/chat/: test_bedrock_chat_agent.py  test_bedrock_chat_agent_usage.py  test_chat_router.py  test_chat_service.py  test_dependencies.py  test_dependencies_unit.py  test_job_models.py  test_job_repository.py  test_repository.py  test_repository_status.py  test_repository_unit.py  test_router_unit.py  test_service.py  test_service_unit.py  test_worker.py  test_worker_claims.py  test_worker_unit.py
tests/common/: test_http_client.py  test_knowledge.py  test_mongo.py  test_sqs_client.py
tests/entrypoints/: test_api.py  test_api_lifespan.py  test_fastapi.py
tests/feedback/: test_api_schemas.py  test_dependencies.py  test_models.py  test_repository.py  test_router.py  test_service.py
tests/fixtures/: agent.py  bedrock.py  mongo.py
tests/models/: test_model_router.py  test_service.py
tests/prompts/: test_repository.py
