[project]
name = "ai-defra-search-agent"
version = "0.1.0"
description = "ai-defra-search-agent"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp==3.13.3",
    "anthropic==0.64.0",
    "asgi-logger==0.1.0",
    "aws-embedded-metrics==3.3.0",
    "beautifulsoup4==4.13.5",
    "boto3==1.40.31",
    "dnspython==2.7.0",
    "ecs-logging==2.2.0",
    "fastapi==0.121.2",
    "httpx==0.28.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "pymongo[aws,encryption,snappy,zstd]==4.13.1",
    "starlette==0.49.1",
    "tiktoken==0.11.0",
    "uvicorn==0.34.3",
]

[dependency-groups]
dev = [
    "debugpy==1.8.17",
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock==3.15.1",
    "ruff==0.11.13",
    "taskipy==1.14.1",
    "testcontainers==4.13.3",
]

[project.scripts]
ai-defra-search-agent = "app.entrypoints.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.coverage.run]
branch = true
include = ["app/*"]
omit = ["tests/*"]

[tool.coverage.html]
directory = "coverage/coverage_html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.taskipy.tasks]
lint = "uv run ruff format ./app ./tests --check && uv run ruff check ./app ./tests"
test = "uv run task lint && uv run coverage run -m pytest -vv && uv run coverage html && uv run coverage xml"

[tool.pytest]
minversion = "7.0"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.mypy]
[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true
